Fixed ui color issue and main textarea scrollbar

--- a/Themes/Material-Discord/src/_selectorPlaceholders.scss
+++ b/Themes/Material-Discord/src/_selectorPlaceholders.scss
@@ -2035,7 +2035,7 @@
 .buttonContainer__74017 {
 	@extend %channelTextAreaButtonContainer !optional;
 }
-.button__24af7 {
+.button__74017 {
 	@extend %channelTextAreaButton !optional;
 }
 .emojiButton__04eed {
