--- a/Themes/Material-Discord/src/chat/_textarea.scss
+++ b/Themes/Material-Discord/src/chat/_textarea.scss
@@ -93,10 +93,11 @@
 
 	%channelTextAreaTyping {
 		position: absolute;
-		width: calc(100% - var(--scrollbar-width));
+		width: calc(100% - (var(--scrollbar-width) + var(--spacing-32)));
 		top: -16px;
 		left: 0;
 		margin-top: 0;
+		padding: 0 var(--spacing-16);
 		background-color: var(--typing-color);
 		transition: 200ms ease-in-out;
 
